# PGE_CLICKER

./: CMakeLists.txt  clean_project.bat  open_project.bat
client/: CMakeLists.txt  config.h.in
client/src/components/: CameraComponent.h  CollisionComponent.h  Components.h  HitboxComponent.h  PhysicsComponent.h  SpriteComponent.h  TagComponent.h  TransformComponent.h
client/src/core/: Client.cpp  Client.h  Config.h  Constants.h  Utility.h  main.cpp
client/src/interfaces/: IComponent.h  IScene.h  ISystem.h
client/src/managers/: EventSystem.h  SceneManager.cpp  SceneManager.h
client/src/scenes/: MainMenuScene.cpp  MainMenuScene.h
client/src/systems/: CollectorSystem.cpp  CollectorSystem.h  RenderSystem.cpp  RenderSystem.h  Systems.h
